[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "imap-client>=0.1.8",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
